--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "aws-sdk": "2.1623.0"
   }
 }
